# ntkdrpc

./: .bzrignore  .gitignore  Makefile.am  README  addendum.vala  addr_skeleton.vala  addr_stub.vala  api.vala  caller_info.vala  common_helpers.vala  common_skeleton.vala  common_stub.vala  configure.ac  interfaces.vala  netsukuku_interfaces.vala  netsukuku_skeleton.vala  netsukuku_stub.vala  ntkdrpc.deps  ntkdrpc.pc.in  tasklet_system.vala
build_sources/: interfaces.rpcidl  readme
docs/: README
